# ferriprove

./: .cz.toml  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CODEOWNERS  Cargo.toml  DOMAIN.md  LICENSE  LICENSE-HEADER  NOTICE  README.md  TODO.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: benchmark.yml  ci.yml  cleanup.yml  pr-automation.yml  pre-commit.yml  proofs.yml  release.yml  security.yml
docs/: AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  PRECOMMIT.md  PRECOMMIT_SCRIPTS.md  PR_HANDLING.md  SCRIPT_HOOKS_GUIDE.md  SECURITY.md  SOUNDNESS.md
ferriprove-cli/: Cargo.toml
ferriprove-cli/src/: main.rs
ferriprove-elab/: Cargo.toml
ferriprove-elab/src/: lib.rs
ferriprove-export/: Cargo.toml
ferriprove-export/fuzz/: Cargo.toml
ferriprove-export/fuzz/fuzz_targets/: fuzz_ndjson.rs
ferriprove-export/src/: ast.rs  error.rs  lib.rs  parser.rs  resolver.rs
ferriprove-kernel/: Cargo.toml
ferriprove-kernel/src/: lib.rs
ferriprove-lsp/: Cargo.toml
ferriprove-lsp/src/: lib.rs
ferriprove-tactic/: Cargo.toml
ferriprove-tactic/src/: lib.rs
ferriprove-types/: Cargo.toml
ferriprove-types/src/: lib.rs
scripts/: check-doc-coverage.sh  dev.sh  run-benchmarks.sh  setup-precommit.sh  validate-workspace.sh
