[package]
name = "ferriprove-cli"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lean 4-compatible type checker CLI in Rust (pre-release placeholder)"
repository = "https://github.com/ferriprove/ferriprove"
authors = ["Ferriprove Contributors"]

[[bin]]
name = "ferriprove"
path = "src/main.rs"

[dependencies]
