[package]
name = "ferriprove-cli"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Lean 4-compatible type checker CLI in Rust"
repository.workspace = true
authors.workspace = true

[[bin]]
name = "ferriprove"
path = "src/main.rs"

[dependencies]
ferriprove-types = { workspace = true }
ferriprove-export = { workspace = true }
ferriprove-kernel = { workspace = true }
ferriprove-elab = { workspace = true }
ferriprove-tactic = { workspace = true }
ferriprove-lsp = { workspace = true }
