[package]
name = "ferriprove-export"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Lean 4 export NDJSON parser in Rust"
repository.workspace = true
authors.workspace = true

[dependencies]
ferriprove-types = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.10.1"
