[package]
name = "ferriprove-kernel"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Lean 4-compatible type checker kernel in Rust"
repository.workspace = true
authors.workspace = true

[dependencies]
ferriprove-types = { workspace = true }
ferriprove-export = { workspace = true }
