[package]
name = "ferriprove-lsp"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Lean 4-compatible Language Server Protocol server in Rust"
repository.workspace = true
authors.workspace = true

[dependencies]
ferriprove-types = { workspace = true }
ferriprove-export = { workspace = true }
ferriprove-kernel = { workspace = true }
ferriprove-elab = { workspace = true }
ferriprove-tactic = { workspace = true }
