[package]
name = "ferriprove-tactic"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Lean 4-compatible tactic engine in Rust"
repository.workspace = true
authors.workspace = true

[dependencies]
ferriprove-types = { workspace = true }
ferriprove-export = { workspace = true }
ferriprove-kernel = { workspace = true }
ferriprove-elab = { workspace = true }
