[package]
name = "ferriprove-types"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lean 4-compatible type checker core types in Rust (pre-release placeholder)"
repository = "https://github.com/ferriprove/ferriprove"
authors = ["Ferriprove Contributors"]

[dependencies]
